--- a/passportlib/src/main/res/values/styles.xml
+++ b/passportlib/src/main/res/values/styles.xml
@@ -10,4 +10,34 @@
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+
+    <!-- 执行操作按钮的样式 -->
+    <style name="PerformBtn">
+        <item name="android:background">@drawable/bg_perform</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/text_size_big</item>
+    </style>
+
+    <!-- 带有边框的执行操作按钮样式 -->
+    <style name="PerformBorderBtn">
+        <item name="android:background">@drawable/bg_border_perform</item>
+        <item name="android:textColor">@color/default_blue</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+    </style>
+
+    <!-- 默认的编辑框样式 -->
+    <style name="PassportEdit">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/size_common_20</item>
+        <item name="android:layout_marginBottom">@dimen/size_common_10</item>
+        <item name="android:background">@null</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">@dimen/text_size_normal</item>
+    </style>
+
+    <!-- 默认的分割线样式 -->
+    <style name="PassportDivider">
+        <item name="android:layout_height">@dimen/border_width_normal</item>
+        <item name="android:background">@color/default_gray</item>
+    </style>
 </resources>
