--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
     tools:context="cc.seedland.inf.samples.MainActivity">
 
     <Button
-        android:id="@+id/main_register"
+        android:id="@+id/main_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="注册测试"/>
+        android:text="修改密码"/>
     <Button
         android:id="@+id/main_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="登录测试" />
+        android:text="登录" />
 
 </LinearLayout>
