--- a/passportlib/src/main/res/values/colors.xml
+++ b/passportlib/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="default_blue">#0e80fe</color>
     <color name="default_gray">#cfcfcf</color>
+    <color name="default_black">#4a4a4a</color>
 </resources>
