--- a/passportlib/src/main/res/values/styles.xml
+++ b/passportlib/src/main/res/values/styles.xml
@@ -35,9 +35,27 @@
         <item name="android:textSize">@dimen/text_size_normal</item>
     </style>
 
+    <!-- 默认的标题样式 -->
+    <style name="PassportTitle">
+        <item name="android:textSize">@dimen/text_size_large</item>
+        <item name="android:textColor">@color/default_black</item>
+    </style>
+    
+    <!-- 默认的入口文本样式 -->
+    <style name="PassportEntry">
+        <item name="android:textColor">@color/default_blue</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+    </style>
+
+    <!-- 默认的Label文本样式 -->
+    <style name="PassportLabel">
+        <item name="android:textColor">@color/default_gray</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+    </style>
+
     <!-- 默认的分割线样式 -->
     <style name="PassportDivider">
-        <item name="android:layout_height">@dimen/border_width_normal</item>
-        <item name="android:background">@color/default_gray</item>
+        <item name="android:layout_height">@dimen/border_width_small</item>
+        <item name="android:background">@color/default_black</item>
     </style>
 </resources>
