完成开发-剩余刷新token

--- a/passportlib/src/main/res/layout/activity_login_password.xml
+++ b/passportlib/src/main/res/layout/activity_login_password.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/size_common_15">
 
     <ImageView
@@ -13,33 +14,28 @@
         android:layout_marginTop="@dimen/size_common_30"
         android:src="@drawable/ic_seedland"/>
     <EditText
-        android:id="@+id/login_phone_edt"
-        style="@style/PassportEdit"
+        android:id="@+id/login_password_phone_edt"
+        style="@style/PhoneEdit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_logo"
-        android:drawableLeft="@drawable/ic_phone"
-        android:drawablePadding="@dimen/size_common_10"
-        android:hint="@string/hint_phone"/>
+        android:layout_below="@id/login_logo" />
     <View
-        android:id="@+id/login_phone_div"
+        android:id="@+id/login_password_phone_div"
         style="@style/PassportDivider"
         android:layout_width="match_parent"
-        android:layout_below="@id/login_phone_edt"/>
-    <EditText
-        android:id="@+id/login_password_edt"
-        style="@style/PassportEdit"
+        android:layout_below="@id/login_password_phone_edt"/>
+    <cc.seedland.inf.passport.widget.PasswordEditText
+        android:id="@+id/login_password_password_edt"
+        style="@style/PasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login_phone_div"
-        android:drawableLeft="@drawable/ic_password"
-        android:drawablePadding="@dimen/size_common_10"
-        android:hint="@string/login_hint_password"/>
+        android:layout_below="@id/login_password_phone_div"
+        app:hint="@string/login_hint_password"
+        app:button="@drawable/password_show_selector"/>
     <View
         android:id="@+id/login_password_div"
         style="@style/PassportDivider"
         android:layout_width="match_parent"
-        android:layout_below="@id/login_password_edt"
+        android:layout_below="@id/login_password_password_edt"
         android:layout_marginBottom="@dimen/size_common_10"/>
     <TextView
         android:id="@+id/login_forget_password_txv"
@@ -57,7 +53,7 @@
         android:layout_alignParentRight="true"
         android:text="@string/login_register"/>
     <Button
-        android:id="@+id/login_perform_btn"
+        android:id="@+id/login_password_perform_btn"
         style="@style/PerformBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,7 +65,7 @@
         style="@style/PassportEntry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login_perform_btn"
+        android:layout_below="@id/login_password_perform_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/size_common_10"
         android:text="@string/login_captcha_entry"/>
