--- a/passportlib/src/main/res/layout/activity_password_reset.xml
+++ b/passportlib/src/main/res/layout/activity_password_reset.xml
@@ -6,13 +6,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/reset_password_toolbar"
+        android:id="@+id/password_reset_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/actionBarSize"
         app:contentInsetStart="0dp">
         <TextView
-            android:id="@+id/reset_password_title_txv"
+            android:id="@+id/password_reset_title_txv"
             style="@style/PassportTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,20 +30,15 @@
         android:showDividers="middle"
         android:padding="@dimen/size_common_15">
         <EditText
-            android:id="@+id/reset_password_phone_edt"
-            style="@style/PassportEdit"
-            android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_phone"
-            android:drawablePadding="@dimen/size_common_10"
-            android:inputType="phone"
-            android:maxLength="20"
-            android:hint="@string/hint_phone"/>
+            android:id="@+id/password_reset_phone_edt"
+            style="@style/PhoneEdit"
+            android:layout_width="match_parent" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <EditText
-                android:id="@+id/reset_password_captcha_edt"
+                android:id="@+id/password_reset_captcha_edt"
                 style="@style/PassportEdit"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -53,7 +48,7 @@
                 android:maxLength="10"
                 android:hint="@string/hint_captcha"/>
             <cc.seedland.inf.passport.widget.CountDownButton
-                android:id="@+id/reset_password_captcha_txv"
+                android:id="@+id/password_reset_captcha_txv"
                 style="@style/PerformBorderBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,26 +61,40 @@
                 app:endText="@string/text_captcha_retrieve"/>
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/reset_password_password_edt"
-            style="@style/PassportEdit"
+        <cc.seedland.inf.passport.widget.PasswordEditText
+            android:id="@+id/password_reset_password_edt"
+            style="@style/PasswordEdit"
             android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_password"
-            android:drawablePadding="@dimen/size_common_10"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:hint="@string/hint_password"/>
-        <EditText
-            android:id="@+id/reset_password_password_confirm_edt"
-            style="@style/PassportEdit"
+            android:layout_height="wrap_content"
+            app:hint="@string/hint_password"
+            app:button="@drawable/password_show_selector"/>
+        <cc.seedland.inf.passport.widget.PasswordEditText
+            android:id="@+id/password_reset_confirm_edt"
+            style="@style/PasswordEdit"
             android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_password"
-            android:drawablePadding="@dimen/size_common_10"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:hint="@string/hint_password_confirm"/>
+            android:layout_height="wrap_content"
+            app:hint="@string/hint_password_confirm"
+            app:button="@drawable/password_show_selector"/>
+        <!--<EditText-->
+            <!--android:id="@+id/password_reset_password_edt"-->
+            <!--style="@style/PassportEdit"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:drawableLeft="@drawable/ic_password"-->
+            <!--android:drawablePadding="@dimen/size_common_10"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:maxLength="16"-->
+            <!--android:hint="@string/hint_password"/>-->
+        <!--<EditText-->
+            <!--android:id="@+id/password_reset_confirm_edt"-->
+            <!--style="@style/PassportEdit"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:drawableLeft="@drawable/ic_password"-->
+            <!--android:drawablePadding="@dimen/size_common_10"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:maxLength="16"-->
+            <!--android:hint="@string/hint_password_confirm"/>-->
         <Button
-            android:id="@+id/reset_password_perform_btn"
+            android:id="@+id/password_reset_perform_btn"
             style="@style/PerformBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
