--- a/passportlib/src/main/res/values/styles.xml
+++ b/passportlib/src/main/res/values/styles.xml
@@ -58,4 +58,23 @@
         <item name="android:layout_height">@dimen/border_width_small</item>
         <item name="android:background">@color/default_black</item>
     </style>
+
+    <!-- 电话号码输入框样式 -->
+    <style name="PhoneEdit" parent="PassportEdit">
+        <item name="android:drawableLeft">@drawable/ic_phone</item>
+        <item name="android:drawablePadding">@dimen/size_common_10</item>
+        <item name="android:inputType">phone</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxLength">11</item>
+        <item name="android:hint">@string/hint_phone</item>
+    </style>
+
+    <!-- 密码输入框样式 -->
+    <style name="PasswordEdit" parent="PassportEdit">
+        <item name="android:drawableLeft">@drawable/ic_password</item>
+        <item name="android:drawablePadding">@dimen/size_common_10</item>
+        <item name="android:inputType">textPassword</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxLength">18</item>
+    </style>
 </resources>
