--- a/passportlib/src/main/res/layout/activity_password_reset.xml
+++ b/passportlib/src/main/res/layout/activity_password_reset.xml
@@ -22,12 +22,10 @@
     <View
         style="@style/PassportDivider"
         android:layout_width="match_parent" />
-    <LinearLayout
+    <cc.seedland.inf.passport.widget.DividerLinearLayout
+        style="@style/PassportDividerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:divider="@color/default_gray"
-        android:showDividers="middle"
         android:padding="@dimen/size_common_15">
         <EditText
             android:id="@+id/password_reset_phone_edt"
@@ -75,24 +73,6 @@
             android:layout_height="wrap_content"
             app:hint="@string/hint_password_confirm"
             app:button="@drawable/password_show_selector"/>
-        <!--<EditText-->
-            <!--android:id="@+id/password_reset_password_edt"-->
-            <!--style="@style/PassportEdit"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:drawableLeft="@drawable/ic_password"-->
-            <!--android:drawablePadding="@dimen/size_common_10"-->
-            <!--android:inputType="textPassword"-->
-            <!--android:maxLength="16"-->
-            <!--android:hint="@string/hint_password"/>-->
-        <!--<EditText-->
-            <!--android:id="@+id/password_reset_confirm_edt"-->
-            <!--style="@style/PassportEdit"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:drawableLeft="@drawable/ic_password"-->
-            <!--android:drawablePadding="@dimen/size_common_10"-->
-            <!--android:inputType="textPassword"-->
-            <!--android:maxLength="16"-->
-            <!--android:hint="@string/hint_password_confirm"/>-->
         <Button
             android:id="@+id/password_reset_perform_btn"
             style="@style/PerformBtn"
@@ -105,6 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/size_common_10"
+            android:tag="divider:0"
             android:text="@string/reset_password_tip"/>
-    </LinearLayout>
+    </cc.seedland.inf.passport.widget.DividerLinearLayout>
 </LinearLayout>
