--- a/passportlib/src/main/res/layout/activity_password_modify.xml
+++ b/passportlib/src/main/res/layout/activity_password_modify.xml
@@ -22,40 +22,32 @@
     <View
         style="@style/PassportDivider"
         android:layout_width="match_parent" />
-    <LinearLayout
+    <cc.seedland.inf.passport.widget.DividerLinearLayout
+        style="@style/PassportDividerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:divider="@color/default_gray"
-        android:showDividers="middle"
         android:padding="@dimen/size_common_15">
-        <EditText
+        <cc.seedland.inf.passport.widget.PasswordEditText
             android:id="@+id/password_modify_origin_edt"
-            style="@style/PassportEdit"
+            style="@style/PasswordEdit"
             android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_phone"
-            android:drawablePadding="@dimen/size_common_10"
-            android:inputType="phone"
-            android:maxLength="20"
-            android:hint="@string/password_modify_hint_origin"/>
-        <EditText
+            android:layout_height="wrap_content"
+            app:hint="@string/password_modify_hint_origin"
+            app:button="@drawable/password_show_selector"/>
+        <cc.seedland.inf.passport.widget.PasswordEditText
             android:id="@+id/password_modify_current_edt"
-            style="@style/PassportEdit"
+            style="@style/PasswordEdit"
             android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_password"
-            android:drawablePadding="@dimen/size_common_10"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:hint="@string/hint_password"/>
-        <EditText
+            android:layout_height="wrap_content"
+            app:hint="@string/hint_password"
+            app:button="@drawable/password_show_selector"/>
+        <cc.seedland.inf.passport.widget.PasswordEditText
             android:id="@+id/password_modify_confirm_edt"
-            style="@style/PassportEdit"
+            style="@style/PasswordEdit"
             android:layout_width="match_parent"
-            android:drawableLeft="@drawable/ic_password"
-            android:drawablePadding="@dimen/size_common_10"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:hint="@string/hint_password_confirm"/>
+            android:layout_height="wrap_content"
+            app:hint="@string/hint_password_confirm"
+            app:button="@drawable/password_show_selector"/>
         <Button
             android:id="@+id/password_modify_perform_btn"
             style="@style/PerformBtn"
@@ -63,5 +55,5 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/size_common_30"
             android:text="@string/register_do"/>
-    </LinearLayout>
+    </cc.seedland.inf.passport.widget.DividerLinearLayout>
 </LinearLayout>
