--- a/passportlib/src/main/res/layout/activity_register.xml
+++ b/passportlib/src/main/res/layout/activity_register.xml
@@ -22,12 +22,10 @@
     <View
         style="@style/PassportDivider"
         android:layout_width="match_parent" />
-    <LinearLayout
+    <cc.seedland.inf.passport.widget.DividerLinearLayout
+        style="@style/PassportDividerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:divider="@color/default_gray"
-        android:showDividers="middle"
         android:padding="@dimen/size_common_15">
         <EditText
             android:id="@+id/register_phone_edt"
@@ -81,5 +79,5 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/size_common_30"
             android:text="@string/register_do"/>
-    </LinearLayout>
+    </cc.seedland.inf.passport.widget.DividerLinearLayout>
 </LinearLayout>
