支持图形验证码

--- a/passportlib/src/main/res/layout/activity_password_reset.xml
+++ b/passportlib/src/main/res/layout/activity_password_reset.xml
@@ -14,6 +14,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/password_reset_captcha_image_edt"
+            style="@style/PassportEdit"
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:hint="@string/hint_image_captcha"/>
+
+        <cc.seedland.inf.passport.widget.RatioImageView
+            android:id="@+id/password_reset_captcha_image_imv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2"
+            app:ratio="1.33"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <EditText
             android:id="@+id/password_reset_captcha_edt"
             style="@style/PassportEdit"
