--- a/passportlib/src/main/res/layout/activity_login_captcha.xml
+++ b/passportlib/src/main/res/layout/activity_login_captcha.xml
@@ -20,6 +20,24 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
+            android:id="@+id/login_captcha_image_edt"
+            style="@style/PassportEdit"
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:hint="@string/hint_image_captcha"/>
+        <cc.seedland.inf.passport.widget.RatioImageView
+            android:id="@+id/login_captcha_image_imv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:layout_gravity="center_vertical"
+            app:ratio="1.33"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <EditText
             android:id="@+id/login_captcha_captcha_edt"
             style="@style/PassportEdit"
             android:layout_width="0dp"
@@ -41,20 +59,6 @@
             app:countingText="@string/hint_captcha_counting"
             app:countingTextColor="@color/default_gray"
             app:endText="@string/text_captcha_retrieve"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/login_captcha_image_edt"
-            style="@style/PassportEdit"
-            android:layout_width="0dp"
-            android:layout_weight="1" />
-        <ImageView
-            android:id="@+id/login_captcha_image_imv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <Button
