--- a/passportlib/src/main/res/layout/activity_login_password.xml
+++ b/passportlib/src/main/res/layout/activity_login_password.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/size_common_30"
+        android:layout_marginTop="@dimen/size_common_20"
+        android:layout_marginBottom="@dimen/size_common_20"
         android:src="@drawable/ic_seedland"/>
     <EditText
         android:id="@+id/login_password_phone_edt"
